...
      child: Row(
        mainAxisAlignment: MainAxisAlignment.spaceAround,
        children: [
          _buildNavItem(0, Icons.home_filled, "Anasayfa"),
          _buildNavItem(1, Icons.task_alt_rounded, "Kazanım"),
          const SizedBox(width: 48), // Space for FAB
          _buildNavItem(2, Icons.menu_book_rounded, "Ödevler"), 
          _buildNavItem(3, Icons.quiz_outlined, "Sınavlar"), 
        ],
      ),
    );
  }

...
